	- Changed EcoObject function pay(n, collector) -> payTo
	- Added reason argument for all eco functions. Will be put in money log along with transaction details.
	- logs folder is now placed in backups.
	- Debug now has it's own log file when it's turned on.
	- Towny/logs/money.csv is in the format 'timestamp,reason,obj,amount,collector'. In the case that there is no collector or obj, [Server] is entered. towny-war-spoils is shown as '[Server] towny-war-spoils'.
	- Town and Nation economy accounts are now restricted to 32 characters in length.
v0.76.2.12:
	- Possible fix for Essentials teleport refusing to engage and towny defaulting to it's own timer.
	- Moved all chat handling to a seperate jar (TownyChat.jar).
	  TownyChat is a Fully functional chat manager. If it's enabled it will handle all chat and supports custom chat channels.
	  This new system supports total customization of chat.
	  It supports custom chat channels, with access control via permission nodes.
	  Current channels are:-
	    /tc (town chat) permission node: towny.chat.town
	    /nc (nation chat) permission node: towny.chat.nation
	    /a (admin chat) permission node: towny.chat.admin
	    /m (moderators chat) permission node: towny.chat.mod
	  TownyChat also supports other chat plugins (herochat, iChat etc). To use another chat plugin with Towny...
	    Set modify_chat.enable : false
	    Then add any of the towny tags into your chat plugins format line.
v0.77.0.0:
	- Release.
v0.77.0.1:
	- Fixed resident colour in config.
	- Fixed creation of the logs folder for new installs causing an error at startup.
	- Added..
	  {townformatted} - Displays town name if a member of a town (using tag_format.town).
      {nationformatted} - Displays nation name if a member of a nation (using tag_format.nation).
    - Changed {townyfullnames} to {townyformatted}.
    - Fixed an error on town loading caused by the new plot level permissions.
v0.76.0.2:
	- Towny now accepts worlds with spaces in their names.